--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -120,7 +120,7 @@ disable404 = true
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "**Summarise your career here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu."
+        summary = "Hi there, my name is **Daniel Endres** and I'm a **Senior Project Manager** at **Nuance Communications**. <br><br>I've graduated at the University of Applied Science Augsburg with a degree in **Computer Science** and a **Master of Arts**. While my professional career started as a Linux Operating Systems developer, my passion for developing IVI's (In-Vehicle Infotainment Systems) drove me towards spending the last 8 years in the **automotive industry**."
 
     # Experiences section
     [params.experiences]
@@ -130,10 +130,9 @@ disable404 = true
 
         [[params.jobs.list]]
         position = "Senior Project Manager - Acoustics"
-        dates = "2015 - Present"
+        dates = "2016 - Present"
         company = "Nuance Communications GmbH, Ulm"
-        details = "**Describe your role here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.\n\n Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."
-
+        details = "At **Nuance** I'm a **Project Manager** in the **Acoustics Speech Enhancement** department. With our main focus being the automotive industry I'm in close contact with a variety of different OEMs and First Tier suppliers. For those I'm the main contact person in contractional, orginzational and **technical** topics. The latter is the most important one over the lifetime of each project. Those technical discussions cover different aspects from requirement analysis, to recommendations regarding the overal system design, integration topics and algorithmic details. To me the possibility to get in touch with allmost every player of the automotive industry is whats so special about the position at Nuance."
         [[params.jobs.list]]
         position = "Technical Project Lead / Software Architect - Multimedia"
         dates = "2012 - 2015"
@@ -148,7 +147,7 @@ disable404 = true
 
         [[params.jobs.list]]
         position = "Linux OS Software Developer"
-        dates = "2012 - 2014"
+        dates = "2008 - 2010"
         company = "Igel GmbH, Augsburg"
         details = "After university I’ve started as a **Linux Operating Systems Developer** responsible for kernel- & network Driver development, extensions of the X11-Server, as well as the extension of the access-control management."
 
