--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -24,14 +24,14 @@ disable404 = true
     # are available. Also the source LESS files are included so
     # it’s quick and easy to change the styling and colour scheme.
 
-    styles = "styles-6.css"
+    styles = "daen-2.css"
 
 # Sidebar sections
 
     # Profile section
     [params.profile]
         name = "Daniel Endres"
-        tagline = "Senior Project Manager"
+        tagline = "Software Architect - Android Automotive"
         avatar = "me.jpg"
 
     # Contact section
@@ -120,7 +120,7 @@ disable404 = true
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "Hi there, <br><br> my name is **Daniel Endres** and I'm a **Senior Project Manager** at **Nuance Communications**. <br>I've graduated at the University of Applied Science Augsburg with a degree in **Computer Science** and a **Master of Arts**. While my professional career started as a Linux Operating Systems developer, my passion for developing IVI's (In-Vehicle Infotainment Systems) drove me towards spending the last **9 years** in the **automotive industry**."
+        summary = "Hi there, <br><br> my name is **Daniel** and I'm a **Software Architect** at **Audi AG**. <br>I've graduated at the University of Applied Science Augsburg with a degree in **Computer Science** and a **Master of Arts**. While my professional career started as a Linux Operating Systems developer, my passion for developing IVI (In-Vehicle Infotainment Systems) Systems drove me towards spending the last **10+ years** in the **automotive industry**."
 
     # Experiences section
     [params.experiences]
@@ -129,10 +129,15 @@ disable404 = true
         title = "Experiences"
 
         [[params.jobs.list]]
+        position = "Software Architect - IVI Platform / Android Automotive"
+        dates = "2019 March - Present"
+        company = "Audi AG, Ingolstadt"
+        details = "Modern vehicles are equipped with quite a bunch of hard- and software. Although the Infotainment itself is just one part of the puzzle, it's the core of that system and the part where I'm contributing to, as a Software Architect defining the overall platform. The **platform** part is also the interesting and challenging factor, since again not just one single piece, but the complete puzzle needs to be understood and considered."
+        [[params.jobs.list]]
         position = "Senior Project Manager - Acoustics"
-        dates = "2016 - Present"
+        dates = "2016 - 2019 Feb"
         company = "Nuance Communications GmbH, Ulm"
-        details = "At **Nuance** I'm a **Project Manager** in the **Acoustics Speech Enhancement** department. With our main focus being the automotive industry I'm in close contact with a variety of different OEMs and First Tier suppliers. For those I'm the main contact person in contractual, organizational and **technical** topics. The latter is the most important one over the lifetime of each project. Those technical discussions cover different aspects from requirement analysis, to recommendations regarding the overal system design, integration topics and algorithmic details. To me the possibility to get in touch with almost every player of the automotive industry is what's so special about this role at Nuance."
+        details = "At **Nuance** I was working as a **Project Manager** in the **Acoustics Speech Enhancement** department. With the main focus being the automotive industry I was in close contact with a variety of different OEMs and First Tier suppliers. For those I was the main contact person in contractual, organizational and **technical** topics. Those technical discussions covered different aspects from requirement analysis, to technical software architecture/overal system design, integration topics and algorithmic details. To me the possibility to get in touch with almost every player of the automotive industry is what's so special about this role at Nuance."
         [[params.jobs.list]]
         position = "Technical Project Lead / Software Architect - Multimedia"
         dates = "2012 - 2015"
@@ -190,12 +195,16 @@ disable404 = true
         title = "Skills & Proficiency"
 
         [[params.skills.list]]
+        skill = "Android Automotive"
+        level = "100%"
+
+        [[params.skills.list]]
         skill = "Project Management"
-        level = "98%"
+        level = "90%"
 
         [[params.skills.list]]
         skill = "Requirements Management"
-        level = "98%"
+        level = "90%"
 
         [[params.skills.list]]
         skill = "Linux"
